syntax = "proto3";

package inventory;

option java_multiple_files = true;
option java_package = "com.shop.proto.inventory";
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc CheckProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 product_id = 1;
  int32 requested_quantity = 2;
}

message ProductResponse {
  int64 product_id = 1;
  string name = 2;
  int32 available_quantity = 3;
  double price = 4;
  double sale = 5;
}